2-Deploy-containers-in-Kubernetes/kubernetes-local/devhour.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devhour
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /order/
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 80
          - path: /product/
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 80
          - path: /report/
            pathType: Prefix
            backend:
              service:
                name: report-service
                port:
                  number: 80
